# oxttools

./: pyproject.toml
lib/oxttools/: hunspell.py  xmltemplate.py
scripts/: ldml2odt  ldml2odt.py  makeoxt  makeoxt.py
